# OmniSkill

./: .gitignore  CLAUDE.md  LICENSE  README.md  V1_IMPLEMENTATION.md  config.json  deps.md  main.py  pyproject.toml
extension/: LICENSE_THIRD_PARTY  dist.crx  dist.pem  package.json
extension/chrome-extension/: manifest.ts
sample_skills/hello-world/: SKILL.md
skills/acquisition-case/: SKILL.md
skills/analogy/: SKILL.md
skills/angel-diligence/: SKILL.md
skills/arch-design/: SKILL.md
skills/attrition-audit/: SKILL.md
skills/brainstorm/: SKILL.md
skills/brand-positioning/: SKILL.md
skills/case-formulation/: SKILL.md
skills/clarify/: SKILL.md
skills/cloud-architecture/: SKILL.md
skills/code-explain/: SKILL.md
skills/cold-sequence/: SKILL.md
skills/community-constitution/: SKILL.md
skills/compare/: SKILL.md
skills/competitive-analysis/: SKILL.md
skills/condense/: SKILL.md
skills/debug/: SKILL.md
skills/design-brief/: SKILL.md
skills/eli5/: SKILL.md
skills/email-draft/: SKILL.md
skills/empathise/: SKILL.md
skills/engagement-design/: SKILL.md
skills/engineering-strategy/: SKILL.md
skills/episode-architecture/: SKILL.md
skills/exec-brief/: SKILL.md
skills/expand/: SKILL.md
skills/extract-wisdom/: SKILL.md
skills/fact-check/: SKILL.md
skills/feedback/: SKILL.md
skills/feedback-diagnosis/: SKILL.md
skills/gh-adr/: SKILL.md
skills/gh-code-review/: SKILL.md
skills/gh-db-migration/: SKILL.md
skills/gh-dependency-audit/: SKILL.md
skills/gh-onboarding-doc/: SKILL.md
skills/gh-performance-audit/: SKILL.md
(+113 files in other folders)
