[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniskill"
version = "0.1.0"
description = "Transport-agnostic MCP middleware for local Skill packages"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
omniskill = "omniskill.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omniskill"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
